--- a/BlogCore/Areas/Admin/Views/Categorias/Edit.cshtml
+++ b/BlogCore/Areas/Admin/Views/Categorias/Edit.cshtml
@@ -1,15 +1,15 @@
 ﻿@model BlogCore.Models.Categoria
 
 @{
-	ViewData["Title"] = "Crear Categoria";
+	ViewData["Title"] = "Editar Categoria";
 }
 
 
 <br />
 <br />
 <br />
-<h3 class="text-center">Crear una nueva categoria</h3>
-<form method="post" asp-action="Create">
+<h3 class="text-center">Editar  categoria</h3>
+<form method="post" asp-action="Edit">
 	<div class="row px-2 offset-1 border">
 		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<div class="col-10 offset-1 mt-4">
@@ -33,12 +33,15 @@
 				</div>
 			</div>
 			<br />
-			<div class="form-group-row">
-				<div class="col-8">
-					<partial name="_VistaCrearVolver" />
+			<div class="row">
+				<div class="col">
+					<button type="submit" class="btn btn-primary form-control">Editar Categoria</button>
+				</div>
+				&nbsp;
+				<div class="col">
+					<a asp-action="Index" class="btn btn-success form-control">Volver atras</a>
 				</div>
 			</div>
-
 		</div>
 	</div>
 </form>
