--- a/BlogCore/Areas/Admin/Views/Categorias/Create.cshtml
+++ b/BlogCore/Areas/Admin/Views/Categorias/Create.cshtml
@@ -11,7 +11,7 @@
 <h3 class="text-center">Crear una nueva categoria</h3>
 <form method="post" asp-action="Create">
 	<div class="row px-2 offset-1 border">
-		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+		<div asp-validation-summary="All" class="text-danger"></div>
 		<div class="col-10 offset-1 mt-4">
 			<div class="form-group row">
 				<div class="col-4">
@@ -42,3 +42,9 @@
 		</div>
 	</div>
 </form>
+
+@section Scripts{
+	@{
+		<partial name="_ValidationScriptsPartial" />
+	}
+}
