--- a/BlogCore/Areas/Admin/Views/Articulos/Create.cshtml
+++ b/BlogCore/Areas/Admin/Views/Articulos/Create.cshtml
@@ -1,71 +1,76 @@
-﻿@model BlogCore.Models.Articulo
+﻿@model BlogCore.Models.ViewModels.ArticuloVM
 
 @{
-	ViewData["Title"] = "Crear Articulo";
+    ViewData["Title"] = "Crear Articulo";
 }
 
+<br />
+<br />
+<h3 class="text-center">Crear un nuevo Artículo</h3>
+<form method="POST" asp-action="Create" enctype="multipart/form-data">
+    <div class="row px-2 offset-1 border">
+        <div asp-validation-summary="All" class="text-danger"></div>
 
-<br />
-<br />
-<br />
-<h3 class="text-center">Crear un nuevo articulo</h3>
-<form method="post" asp-action="Create">
-	<div class="row px-2 offset-1 border">
-		<div asp-validation-summary="All" class="text-danger"></div>
-		<div class="col-10 offset-1 mt-4">
-			<div class="form-group row">
-				<div class="col-4">
-					<label asp-for="Nombre"></label>
-				</div>
-				<div class="col-8">
-					<input asp-for="Nombre" class="form-control" placeholder="Ingresa el nombre" />
-					<span asp-validation-for="Nombre" class="text-danger"></span>
-				</div>
-			</div>
-			<br />
-			<div class="form-group row">
-				<div class="col-4">
-					<label asp-for="Descripcion"></label>
-				</div>
-				<div class="col-8">
-					<input asp-for="Descripcion" class="form-control" placeholder="Ingresa la descripcion" />
-					<span asp-validation-for="Descripcion" class="text-danger"></span>
-				</div>
-			</div>
-			<br />
-			<div class="form-group row">
-				<div class="col-4">
-					<label asp-for="FechaCreacion"></label>
-				</div>
-				<div class="col-8">
-					<input asp-for="FechaCreacion" class="form-control" placeholder="Ingresa el nombre" />
-					<span asp-validation-for="FechaCreacion" class="text-danger"></span>
-				</div>
-			</div>
-			<br />
-			<div class="form-group row">
-				<div class="col-4">
-					<label asp-for="UrlImagen"></label>
-				</div>
-				<div class="col-8">
-					<input asp-for="UrlImagen" class="form-control" placeholder="Ingresa la imagen" />
-					<span asp-validation-for="UrlImagen" class="text-danger"></span>
-				</div>
-			</div>
-			<br />
-			
-			<div class="form-group-row">
-				<div class="col-8">
-					<partial name="_VistaCrearVolver" />
-				</div>
-			</div>
+        <div class="col-10 offset-1 mt-4">
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Articulo.Nombre"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Articulo.Nombre" class="form-control" placeholder="Ingresa el nombre" />
+                    <span asp-validation-for="Articulo.Nombre" class="text-danger"></span>
+                </div>
+            </div>
 
-		</div>
-	</div>
+            <br />
+
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Articulo.Descripcion"></label>
+                </div>
+                <div class="col-8">
+                    <textarea asp-for="Articulo.Descripcion" class="form-control" style="height: 300px;"></textarea>
+                    <span asp-validation-for="Articulo.Descripcion" class="text-danger"></span>
+                </div>
+            </div>
+
+            <br />
+            <div class="form-group row">
+                <div class="col-4">
+                    <label for="Categoría">Categoría</label>
+                </div>
+                <div class="col-8">
+                    @Html.DropDownListFor(m => m.Articulo.CategoriaId, Model.ListaCategorias,
+                             "-Por favor seleccione una categoría-", new { @class = "form-control" })
+                    <span asp-validation-for="Articulo.CategoriaId" class="text-danger"></span>
+                </div>
+            </div>
+
+            <br />
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Articulo.UrlImagen"></label>
+                </div>
+                <div class="col-8">
+                    <input type="file" name="archivos" id="subidaArchivo" class="form-control" />
+                    <span asp-validation-for="Articulo.UrlImagen" class="text-danger"></span>
+                </div>
+            </div>
+
+            <br />
+
+            <div class="form-group-row">
+                <div class="col-8">
+                    <partial name="_VistaCrearVolver" />
+                </div>
+            </div>
+        </div>
+
+    </div>
 </form>
 
 @section Scripts {
-	@{
-				<partial name="_ValidationScriptsPartial" />
-	}
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 }
