--- a/BlogCore/Areas/Admin/Views/Articulos/Edit.cshtml
+++ b/BlogCore/Areas/Admin/Views/Articulos/Edit.cshtml
@@ -1,17 +1,21 @@
 ﻿@model BlogCore.Models.ViewModels.ArticuloVM
 
 @{
-    ViewData["Title"] = "Crear Articulo";
+    ViewData["Title"] = "Editar Articulo";
 }
 
 <br />
 <br />
-<h3 class="text-center">Crear un nuevo Artículo</h3>
-<form method="POST" asp-action="Create" enctype="multipart/form-data">
-    <div class="row px-2 offset-1 border">
+<h3 class="text-center">Editar Artículo</h3>
+<form method="POST" asp-action="Edit" enctype="multipart/form-data">
+
+    <!--Se envía el ID del artículo como campo oculto-->
+    <input type="hidden" asp-for="Articulo.Id" />
+
+    <div class="row px-2 border">
         <div asp-validation-summary="All" class="text-danger"></div>
 
-        <div class="col-10 offset-1 mt-4">
+        <div class="col-8 mt-4">
             <div class="form-group row">
                 <div class="col-4">
                     <label asp-for="Articulo.Nombre"></label>
@@ -52,18 +56,26 @@
                     <label asp-for="Articulo.UrlImagen"></label>
                 </div>
                 <div class="col-8">
-                    <input type="file" name="Articulo.UrlImagen" accept="image/*" id="subidaArchivo" class="form-control" />
+                    <input type="file" name="archivos" id="subidaArchivo" class="form-control" />
                     <span asp-validation-for="Articulo.UrlImagen" class="text-danger"></span>
                 </div>
             </div>
 
             <br />
 
-            <div class="form-group-row">
-                <div class="col-8">
-                    <partial name="_VistaCrearVolver" />
+            <div class="row">
+                <div class="col">
+                    <button type="submit" class="btn btn-primary form-control">Editar Artículo</button>
+                </div>
+                &nbsp;
+                <div class="col">
+                    <a asp-action="Index" class="btn btn-success form-control">Volver atrás</a>
                 </div>
             </div>
+        </div>
+
+        <div class="col-4 pt-3">
+            <img src="@Model.Articulo.UrlImagen" width="300px" style="border-radius:5px; border:1px solid #bbb9b9" />
         </div>
 
     </div>
@@ -73,6 +85,7 @@
     @{
         <partial name="_ValidationScriptsPartial" />
     }
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/6.8.3/tinymce.min.js" integrity="sha512-VCEWnpOl7PIhbYMcb64pqGZYez41C2uws/M/mDdGPy+vtEJHd9BqbShE4/VNnnZdr7YCPOjd+CBmYca/7WWWCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         tinymce.init({
