--- a/BlogCore/Areas/Cliente/Views/Home/Index.cshtml
+++ b/BlogCore/Areas/Cliente/Views/Home/Index.cshtml
@@ -3,9 +3,10 @@
     ViewData["Title"] = "Inicio";
 }
 
+
 <div class="row mt-1">
     <div class="col-sm-12">
-        <h1 class="text-center text-white bg-secondary py-1">Ultimos Cursos y Tutoriales</h1>
+        <h1 class="text-center text-dark bg-secondary py-1">Ultimos Cursos y Tutoriales</h1>
     </div>
 </div>
 
