--- a/BlogCore/Views/Shared/_Layout.cshtml
+++ b/BlogCore/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     @* <link rel="stylesheet" href="~/BlogCore.styles.css" asp-append-version="true" /> *@
 </head>
 <body>
+   
     <header>
         <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container">
@@ -47,7 +48,14 @@
                 <partial name="_LoginPartial" />
             </div>
         </nav>
+        <!--Aquí vista parcial slider-->
+        @if (ViewBag.IsHome == true)
+        {
+            <partial name="_Slider" />
+        }
     </header>
+
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
