--- a/BlogCore/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BlogCore/Areas/Identity/Pages/Account/Register.cshtml
@@ -48,15 +48,18 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <!--Selector de Roles-->
-            <div class="form-group row">
-                <div class="col-6"><h4>Seleccionar Rol de Usuario</h4></div>
+            @if (User.IsInRole(CNT.Administrador))
+            {
+                <!--Selector de Roles-->
+                <div class="form-group row">
+                    <div class="col-6"><h4>Seleccionar Rol de Usuario</h4></div>
                 <div class="col-5">
                     <input type="radio" name="radUsuarioRole" value="@CNT.Administrador" /> @CNT.Administrador
                     <input type="radio" name="radUsuarioRole" value="@CNT.Registrado" /> @CNT.Registrado
                     <input type="radio" name="radUsuarioRole" value="@CNT.Cliente" /> @CNT.Cliente
                 </div>
             </div>
+            }
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
