--- a/BlogCore/Areas/Cliente/Views/Home/Index.cshtml
+++ b/BlogCore/Areas/Cliente/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row mt-1">
     <div class="col-sm-12">
-        <h1 class="text-center text-dark bg-secondary py-1">The last achievments</h1>
+        <h1 class="text-center text-dark bg-secondary py-1">Últimos Cursos y Tutoriales</h1>
     </div>
 </div>
 
@@ -39,23 +39,23 @@ else
 <br />
 <!--Crear botones de páginación-->
 
-@* <div class="text-center"> *@
-@*     <nav aria-label="Page navigation"> *@
-@*         <ul class="pagination"> *@
-@*             <li class="page-item @(Model.PageIndex > 1 ? "" : "disabled")"> *@
-@*                 <a class="page-link" asp-controller="Home" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)">Anterior</a> *@
-@*             </li> *@
-@*             @for (int i = 1; i <= Model.TotalPages; i++) *@
-@*             { *@
-@*                 <li class="page-item @(i == Model.PageIndex ? "active" : "")"> *@
-@*                     <a class="page-link" asp-controller="Home" asp-action="Index" asp-route-page="@i">@i</a> *@
-@*                 </li> *@
-@*             } *@
-@*             <li class="page-item @(Model.PageIndex < Model.TotalPages ? "" : "disabled")"> *@
-@*                 <a class="page-link" asp-controller="Home" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)">Siguiente</a> *@
-@*             </li> *@
-@*         </ul> *@
-@*     </nav> *@
-@* </div> *@
+<div class="text-center">
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            <li class="page-item @(Model.PageIndex > 1 ? "" : "disabled")">
+                <a class="page-link" asp-controller="Home" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)">Anterior</a>
+            </li>
+            @for (int i = 1; i <= Model.TotalPages; i++)
+            {
+                <li class="page-item @(i == Model.PageIndex ? "active" : "")">
+                    <a class="page-link" asp-controller="Home" asp-action="Index" asp-route-page="@i">@i</a>
+                </li>
+            }
+            <li class="page-item @(Model.PageIndex < Model.TotalPages ? "" : "disabled")">
+                <a class="page-link" asp-controller="Home" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)">Siguiente</a>
+            </li>
+        </ul>
+    </nav>
+</div>
 
 
