--- a/BlogCore/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/BlogCore/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -5,6 +5,9 @@
 }
 
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <div class="text-center">
+        <img src="~/imagenes/bloquear.png" class="img-fluid" width="150" />
+        <h1 class="text-danger">@ViewData["Title"]</h1>
+        <p class="text-danger">This account has not access, please try again later.</p>
+    </div>
 </header>
