--- a/BlogCore/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/BlogCore/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -5,6 +5,9 @@
 }
 
 <header>
+    <div class="text-center">
+        <img src="~/imagenes/no-autorizado.png" class="img-fluid" width="150" />
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">This account has been locked out, please try again later.</p>
+    </div>
 </header>
