siembra de datos

--- a/BlogCore/Areas/Cliente/Views/Home/Index.cshtml
+++ b/BlogCore/Areas/Cliente/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BlogCore.Models.ViewModels.HomeVM
 
 @{
-    ViewData["Title"] = "Inicio";
+    ViewData["Title"] = "GustavoDev";
 }
 
 <div class="row mt-1">
