--- a/BlogCore/Views/Shared/_Layout.cshtml
+++ b/BlogCore/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - BlogCore</title>
+    <title>@ViewData["Title"] - GustavoDev</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap5.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <!--Css todos-->
@@ -63,6 +63,8 @@
             <partial name="_Slider" />
         }
     </header>
+    <!--Banner-->
+
 
 
     <div class="container">
@@ -70,12 +72,18 @@
             @RenderBody()
         </main>
     </div>
+    <div class="container-fluid banner-container">
+        <div class="container banner-content">
+            <button type="button" class="btn btn-success subscribe-btn">Suscribe for get discounts and promos</button>
+        </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - BlogCore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </div>
+    <footer class="border-top footer text-muted bg-dark" style="background-color: #1a1a1a !important;">
+        <div class="container py-4">
+            <span class="text-white">&copy; 2025 - GustavoDev -</span> <a href="https://gustavo-larco.netlify.app/" class="text-white">You wanna see the other portfolio ?</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!--Js plugins-->
