--- a/BlogCore/wwwroot/css/site.css
+++ b/BlogCore/wwwroot/css/site.css
@@ -37,3 +37,25 @@ html {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
+
+.banner-container{
+    position:relative;
+    height:70vh;
+    overflow:hidden;
+    background: url('../imagenes/fondo-banner.jpg') center no-repeat;
+    background-size: cover;
+}
+
+.banner-content {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%);
+    text-align: center;
+    margin-bottom: 50px;
+}
+.subscribe-btn {
+    padding:15px 30px;
+    font-size: 32px;
+    border-radius: 14px; 
+}
